--- a/res/layout/progress_spinner.xml
+++ b/res/layout/progress_spinner.xml
@@ -9,17 +9,12 @@
     android:orientation="vertical"
     android:visibility="gone" >
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:indeterminateDrawable="@drawable/progress" />
-
     <TextView
         android:id="@+id/login_status_message"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/anim_connexion"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:text="@string/search_progress"
         android:textColor="@color/black" />
 
 </LinearLayout>
