--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black" >
- 
+
     <ImageView
-        android:id="@+id/imgLogo" 
+        android:id="@+id/imgLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/splash_logo"
-        android:contentDescription="Logo ENSIIE" />
- 
+        android:contentDescription="Logo ENSIIE"
+        android:src="@drawable/splash_logo" />
+
 </RelativeLayout>
