--- a/res/layout/news_item.xml
+++ b/res/layout/news_item.xml
@@ -12,6 +12,7 @@
         android:id="@+id/rss_header"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/header_news"
         android:drawableLeft="@drawable/aeiie"
         android:gravity="center"
         android:paddingLeft="8dp"
