--- a/res/layout/twitter_item.xml
+++ b/res/layout/twitter_item.xml
@@ -46,12 +46,11 @@
                 android:id="@+id/publishtime"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:layout_gravity="right"
                 android:layout_marginRight="8dp"
+                android:gravity="right"
                 android:textColor="@color/gray"
                 android:textSize="14sp" />
-            
         </LinearLayout>
 
         <TextView
@@ -59,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:paddingRight="16dp"
             android:textColor="@color/black"
             android:textSize="16sp" />
     </LinearLayout>
