--- a/res/layout/login_progress.xml
+++ b/res/layout/login_progress.xml
@@ -9,12 +9,17 @@
     android:orientation="vertical"
     android:visibility="gone" >
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:indeterminateDrawable="@drawable/progress" />
+
     <TextView
         android:id="@+id/login_status_message"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:text="@string/edt_search_progress"
+        android:layout_height="wrap_content"
+        android:text="@string/in_progress"
         android:textColor="@color/black" />
 
 </LinearLayout>
