--- a/res/layout/news_item.xml
+++ b/res/layout/news_item.xml
@@ -9,7 +9,7 @@
     android:paddingTop="8dp" >
 
     <TextView
-        android:id="@+id/rss_header"
+        android:id="@+id/news_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/header_news"
@@ -19,15 +19,17 @@
         android:paddingRight="8dp"
         android:paddingTop="8dp"
         android:singleLine="false"
+        android:text="@string/news_title"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/rss_description"
+        android:id="@+id/news_description"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
+        android:text="@string/news_description"
         android:textColor="@color/black"
         android:textSize="14sp" />
 
