--- a/res/layout/trombi_result.xml
+++ b/res/layout/trombi_result.xml
@@ -4,22 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/edt_date"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/darkorange"
-        android:gravity="center"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
     <include
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         layout="@layout/fragment_listview" />
+    <!--
+         <GridView
+        android:id="@+id/gridview"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+		android:numColumns="auto_fit"
+		android:verticalSpacing="8dp"
+		android:horizontalSpacing="8dp"
+		android:columnWidth="100dp"
+		android:stretchMode="columnWidth"
+		android:gravity="center">
+    </GridView>
+    -->
 
     <Button
         android:id="@+id/edt_newsearch_button"
