--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/login_bckgrd_motif"
     tools:context="com.iiens.net.Login" >
 
     <!-- Login progress -->
@@ -13,7 +12,7 @@
         android:visibility="gone" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="@drawable/card_background"
@@ -57,13 +56,11 @@
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/bottom_line"
                 android:hint="@string/hint_user"
-                android:paddingBottom="16dp"
                 android:paddingLeft="8dp"
-                android:paddingTop="16dp"
                 android:singleLine="true"
                 android:textSize="16sp" />
 
@@ -71,15 +68,13 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/bottom_line"
                 android:hint="@string/hint_password"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
-                android:paddingBottom="16dp"
                 android:paddingLeft="8dp"
-                android:paddingTop="16dp"
                 android:singleLine="true"
                 android:textSize="16sp" />
 
