--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- inherit from the material theme -->
-	<style name="AppTheme" parent="android:Theme.Material">
+	<style name="AppTheme" parent="android:Theme.Material.Light">
 
         <item name="android:colorPrimary">@color/aqua</item>
         <item name="android:colorPrimaryDark">@color/aqua</item>
