--- a/res/layout/edt_result.xml
+++ b/res/layout/edt_result.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        layout="@layout/fragment_listview" />
+        layout="@layout/listview" />
 
     <Button
         android:id="@+id/edt_newsearch_button"
