--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listview"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:cacheColorHint="#0000"
-    android:divider="@null" />
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    android:title="Préférences" >
+
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="login_option"
+        android:summaryOff="L&apos;option de connexion est désactivée"
+        android:summaryOn="L&apos;option de connexion est activée"
+        android:title="Connexion OpenID" />
+
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="storage_option"
+        android:summaryOff="Les données publiques sont chargées à partir d'Internet"
+        android:summaryOn="Les données publiques sont stockées sur l'appareil"
+        android:title="Stockage local" />
+
+</PreferenceScreen>
