--- a/res/layout/trombi_result.xml
+++ b/res/layout/trombi_result.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        layout="@layout/fragment_listview" />
+        layout="@layout/listview" />
     <!--
          <GridView
         android:id="@+id/gridview"
