--- a/res/layout/viewpager.xml
+++ b/res/layout/viewpager.xml
@@ -5,17 +5,27 @@
     android:orientation="vertical" >
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+        android:id="@+id/edt_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="0dp"
+        android:layout_weight="1" >
 
         <android.support.v4.view.PagerTabStrip
-            android:id="@+id/pager_header"
+            android:id="@+id/edt_pager_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
+            android:background="@color/orange"
             android:paddingBottom="4dp"
             android:paddingTop="4dp" />
     </android.support.v4.view.ViewPager>
+
+    <Button
+        android:id="@+id/edt_newsearch_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@null"
+        android:text="@string/edt_newsearch_button" />
 
 </LinearLayout>
