--- a/res/layout/trombi_formulaire.xml
+++ b/res/layout/trombi_formulaire.xml
@@ -11,19 +11,15 @@
 
         <LinearLayout
             android:id="@+id/trombi_formulaire"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="left"
             android:orientation="vertical" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/page_trombi" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="horizontal" >
 
                 <TextView
@@ -34,27 +30,20 @@
                     android:paddingRight="8dp"
                     android:text="@string/trombi_nom" />
 
-                <Spinner
-                    android:id="@+id/option_nom"
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/nom"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:entries="@array/option" >
-                </Spinner>
+                    android:ems="10"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:singleLine="true" />
             </LinearLayout>
-
-            <EditText
-                android:id="@+id/nom"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="horizontal" >
 
                 <TextView
@@ -65,23 +54,15 @@
                     android:paddingRight="8dp"
                     android:text="@string/trombi_prenom" />
 
-                <Spinner
-                    android:id="@+id/option_prenom"
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/prenom"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:entries="@array/option" >
-                </Spinner>
+                    android:ems="10"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:singleLine="true" />
             </LinearLayout>
-
-            <EditText
-                android:id="@+id/prenom"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -95,22 +76,14 @@
                     android:paddingRight="8dp"
                     android:text="@string/trombi_pseudo" />
 
-                <Spinner
-                    android:id="@+id/option_pseudo"
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/pseudo"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:entries="@array/option" >
-                </Spinner>
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:singleLine="true" />
             </LinearLayout>
-
-            <EditText
-                android:id="@+id/pseudo"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
