--- a/res/layout/edt_formulaire.xml
+++ b/res/layout/edt_formulaire.xml
@@ -15,11 +15,21 @@
             android:layout_gravity="left"
             android:orientation="vertical" >
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="16dp"
+                android:text="@string/edt_formulaire"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="16dp" >
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp" >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -74,7 +84,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:padding="8dp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp" />
             </LinearLayout>
@@ -99,10 +108,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:entries="@array/edt_option_groupe"
-                    android:padding="8dp"
                     android:paddingLeft="16dp"
-                    android:paddingRight="16dp" >
-                </Spinner>
+                    android:paddingRight="16dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -127,10 +134,34 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:entries="@array/edt_comm_grp"
-                    android:padding="8dp"
                     android:paddingLeft="16dp"
-                    android:paddingRight="16dp" >
-                </Spinner>
+                    android:paddingRight="16dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/edt_langue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:visibility="gone" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/edt_langue_txt" />
+
+                <Spinner
+                    android:id="@+id/edt_lang_spin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:entries="@array/edt_langue"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp" />
             </LinearLayout>
 
             <include layout="@layout/edt_options2a" />
