--- a/res/layout/edt_options3a.xml
+++ b/res/layout/edt_options3a.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="@string/edt_option1" />
@@ -40,7 +40,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="@string/edt_option2" />
@@ -63,7 +63,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="@string/edt_option3" />
@@ -86,7 +86,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="@string/edt_option4" />
@@ -109,7 +109,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="@string/edt_option5" />
@@ -132,7 +132,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="@string/edt_option6" />
