--- a/res/values/strings_edt.xml
+++ b/res/values/strings_edt.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="edt_formulaire">Choix des options de l\'emploi du temps</string>
     <string name="edt_search_txt">Emploi du temps &#8230; </string>
     <string name="chk_1A">1A</string>
     <string name="chk_2A">2A</string>
     <string name="chk_3A">3A</string>
-    <string name="edt_date_txt">Semaine : </string>
+    <string name="edt_date_txt">Semaine :</string>
     <string name="edt_groupe_txt">Groupes :</string>
-     <string name="edt_comm_txt">Groupe de comm\' :</string>
+    <string name="edt_comm_txt">Groupe de comm\' :</string>
+    <string name="edt_langue_txt">Langue :</string>
     <string name="edt_search_button">Rechercher</string>
     <string name="edt_search_progress">Recherche en cours &#8230;</string>
     <string name="edt_newsearch_button">Nouvelle recherche</string>
@@ -36,7 +38,7 @@
         <item value="6">Groupe 6</item>
         <item value="FIPA">Groupe FIPA</item>
     </string-array>
-        <string-array name="edt_comm_grp">
+    <string-array name="edt_comm_grp">
         <item>---</item>
         <item value="GR A">Groupe A</item>
         <item value="GR B">Groupe B</item>
