--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.iiens.net.Main" >
+    tools:context="com.iiens.net.ActionBar" >
 
     <item
         android:id="@+id/action_refresh"
