Modification liste de news et ajout détail news

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -6,7 +6,7 @@
     <color name="dkGray">#FF444444</color>
     <color name="gray">#808080</color>
     <color name="green">#008000</color>
-    <color name="ltGray">#FFCCCCCC</color>
+    <color name="ltGray">#DDDDDD</color>
     <color name="magenta">#FFFF00FF</color>
     <color name="red">#FF0000</color>
     <color name="transparent">#00000000</color>
