--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <!-- Page principale -->
 
     <FrameLayout
-        android:id="@+id/content"
+        android:id="@+id/content_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
