--- a/app/src/main/res/layout/progress_spinner.xml
+++ b/app/src/main/res/layout/progress_spinner.xml
@@ -6,14 +6,18 @@
     android:background="@drawable/card_background"
     android:gravity="center"
     android:orientation="vertical"
-    android:visibility="visible" >
+    android:visibility="gone" >
 
-    <TextView
-        android:id="@+id/status_message"
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:text="@string/edt_search_progress"
-        android:textColor="@color/black" />
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="visible"
+        android:indeterminateDrawable="@drawable/progress" >
+
+    </ProgressBar>
 
 </LinearLayout>
